docker-k8s/k8s/server-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: ebzdag/fib-server
          resources:
              limits:
                memory: "128Mi"
                cpu: "500m"
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: server-client
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - port: 5000
      targetPort: 5000
